--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- Base URL configuration -->
-  <base href="/">
+  <base href="/follow_check_app/"> <!-- Substitua follow_check_app pelo nome do seu repositório -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -15,18 +15,18 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="follow_check_app/favicon.png"/>
 
   <title>Follow Check App</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="follow_check_app/manifest.json">
   
   <!-- Include the necessary scripts -->
-  <script src="flutter.js" defer></script>
-  <script src="main.dart.js" defer></script>
+  <script src="follow_check_app/flutter.js" defer></script>
+  <script src="follow_check_app/main.dart.js" defer></script>
   
   <script>
     // Set the renderer used by the app (canvaskit or html)
-    window.flutterWebRenderer = 'html'; // Use 'canvaskit' if you want that
+    window.flutterWebRenderer = 'html'; // Use 'canvaskit' if you prefer that
   </script>
 </head>
 <body>
