--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Base URL configuration -->
-  <base href="/follow_check_app/"> <!-- Substitua follow_check_app pelo nome do seu repositório -->
+  <!-- Ajuste do caminho base para GitHub Pages -->
+  <base href="/follow_check_app/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -15,18 +15,18 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="follow_check_app/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>Follow Check App</title>
-  <link rel="manifest" href="follow_check_app/manifest.json">
+  <link rel="manifest" href="manifest.json">
   
-  <!-- Include the necessary scripts -->
-  <script src="follow_check_app/flutter.js" defer></script>
-  <script src="follow_check_app/main.dart.js" defer></script>
+  <!-- Inclua os scripts necessários -->
+  <script src="/follow_check_app/flutter.js" defer></script>
+  <script src="/follow_check_app/main.dart.js" defer></script>
   
   <script>
-    // Set the renderer used by the app (canvaskit or html)
-    window.flutterWebRenderer = 'html'; // Use 'canvaskit' if you prefer that
+    // Defina o renderer usado pelo app (canvaskit ou html)
+    window.flutterWebRenderer = 'html'; // Use 'canvaskit' se quiser o outro renderer
   </script>
 </head>
 <body>
